# industrial-automaton

./: .gitignore  EXPERIMENTS.md  README.md  program.md  pyproject.toml
.ar/: vegstew_02.md  vegstew_pre.md
.autoresearch/: mar11.md  mar13.md  mar14.md
.opencode/agents/: experiment-runner.md
src/industrial_automaton/: cli.py  config.py  curriculum.py  trainer.py  trainer_jx.py  trainer_torch.py  utils.py  vocab.py
src/industrial_automaton/models/: __init__.py  common.py  implicit.py  stack_rnns.py  tape.py  transformers.py
src/industrial_automaton/models/baby_ntm/: __init__.py  core.py  memory_ops.py
src/industrial_automaton/models/lstm/: __init__.py  core.py
src/industrial_automaton/models/suzgun_stack_rnn/: __init__.py  core.py
src/industrial_automaton/models/tape_rnn/: __init__.py  core.py
src/industrial_automaton/models/transformer/: __init__.py  core.py
src/industrial_automaton/models_jax/: __init__.py  implicit.py  stack_rnns.py  tape.py  transformers.py
src/industrial_automaton/models_torch/: __init__.py  common.py  tallerman.py  tape.py  vegstew.py
src/industrial_automaton/tasks/: README.md  __init__.py  arithmetic.py  context_free.py  context_sensitive.py  data_processing.py  generators.py  graphs_geometry.py  registry.py  regular.py
tests/: test_baby_ntm.py  test_new_models.py  test_suzgun_stack_rnn.py  test_tasks.py  test_trainer.py  test_vocab.py
